--- a/index.html
+++ b/index.html
@@ -88,15 +88,15 @@
 
 				<div class="offset-lg-1 col-lg-5">
 					<div class="main_title text-left">
-						<h2>Let’s <br>
-							Introduce About <br>
+						<h2>Let me <br>
+							Introduce <br>
 							Myself</h2>
 						<p>
 							Hello, I’m 3rd Semester Digital Marketing student from Amity Global Business School Noida.
 												  My favorite writer Antony J. D’Angelo once said “Develop a passion for learning. If you do, you will never cease to grow”.
 													 I’m a passionate guy. I love to learn new technologies and see how they work.
-						               I have learnt various digital marketing skills like SEO, SMO, Web Designing, Content Writing, etc. and also created projects on it .
-													 Right now I’m learning digital marketing tools and looking forward to learn more of them.
+						               I have learned various digital marketing skills like SEO, SMO, Web Designing, Content Writing, etc. and also worked on projects related to same .
+													 As digital Marketing is dynamic world. I make myself learn something new everyday.
 
 
 						</p>
@@ -212,8 +212,8 @@
 					<div class="main_title">
 						<h2>Service offers </h2>
 						<p>
-							As I'm a Digital Marketer, I'll work in different domains you can see the services below
-						 <br> I'm good in these service and having experience also.
+							As I'm a Digital Marketer, I'll work with different domains, you can find the services below,
+						 <br> I'm good at these service and I am experienced also.
 						</p>
 					</div>
 				</div>
