--- a/services.html
+++ b/services.html
@@ -72,8 +72,8 @@
 					<div class="main_title">
 						<h2>Service offers </h2>
 						<p>
-							As I'm a Digital Marketer, I'll work in different domains you can see the services below
-						 <br> I'm good in these service and having experience also.
+							As I'm a Digital Marketer, I'll work with different domains, you can find the services below,
+						 <br> I'm good at these service and I am experienced also.
 						</p>
 					</div>
 				</div>
