--- a/about.html
+++ b/about.html
@@ -76,15 +76,16 @@
 
                 <div class="offset-lg-1 col-lg-5">
                     <div class="main_title text-left">
-                        <h2>Let’s Me<br>
-                            Introduce About <br>
-                            Myself</h2>
+                        <h2>Let me <br>
+							Introduce <br>
+							Myself</h2>
                         <p>
-													Hello, I’m 3rd Semester Digital Marketing student from Amity Global Business School Noida.
+							
+												  Hello, I’m 3rd Semester Digital Marketing student from Amity Global Business School Noida.
 												  My favorite writer Antony J. D’Angelo once said “Develop a passion for learning. If you do, you will never cease to grow”.
 													 I’m a passionate guy. I love to learn new technologies and see how they work.
-						               I have learnt various digital marketing skills like SEO, SMO, Web Designing, Content Writing, etc. and also created projects on it .
-													 Right now I’m learning digital marketing tools and looking forward to learn more of them.
+						               I have learned various digital marketing skills like SEO, SMO, Web Designing, Content Writing, etc. and also worked on projects related to same .
+													 As digital Marketing is dynamic world. I make myself learn something new everyday.
                         </p>
                         <a class="primary_btn" href="CV/Resume.pdf"><span>Get Resume</span></a>
 												<a class="primary_btn" href="https://drive.google.com/drive/folders/1oNqvJqemSrjLKAsGz2ZFchSeXQ11LWBU?usp=sharing"><span>Get Certificates</span></a>
