--- a/about.html
+++ b/about.html
@@ -81,13 +81,13 @@
 							Myself</h2>
                         <p>
 							
-												  Hello, I’m 3rd Semester Digital Marketing student from Amity Global Business School Noida.
+												  Hello, I’m a Graduated Digital Marketing student from Amity Global Business School Noida.
 												  My favorite writer Antony J. D’Angelo once said “Develop a passion for learning. If you do, you will never cease to grow”.
 													 I’m a passionate guy. I love to learn new technologies and see how they work.
 						               I have learned various digital marketing skills like SEO, SMO, Web Designing, Content Writing, etc. and also worked on projects related to same .
 													 As digital Marketing is dynamic world. I make myself learn something new everyday.
                         </p>
-                        <a class="primary_btn" href="CV/Resume.pdf"><span>Get Resume</span></a>
+                        <a class="primary_btn" href="CV/CVikrant.pdf"><span>Get Resume</span></a>
 												<a class="primary_btn" href="https://drive.google.com/drive/folders/1oNqvJqemSrjLKAsGz2ZFchSeXQ11LWBU?usp=sharing"><span>Get Certificates</span></a>
                     </div>
                 </div>
