--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 							Introduce <br>
 							Myself</h2>
 						<p>
-							Hello, I’m 3rd Semester Digital Marketing student from Amity Global Business School Noida.
+							Hello, I’m a Graduated Digital Marketing student from Amity Global Business School Noida.
 												  My favorite writer Antony J. D’Angelo once said “Develop a passion for learning. If you do, you will never cease to grow”.
 													 I’m a passionate guy. I love to learn new technologies and see how they work.
 						               I have learned various digital marketing skills like SEO, SMO, Web Designing, Content Writing, etc. and also worked on projects related to same .
